apps/photoBook/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photobook
spec:
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
