apps/photoBook/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photobook
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: photobook.duytran.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photobook
                port:
                  number: 80
